@@ -1,5 +1,10 @@
 2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>
 
+	* support/scripts/mcs51-disasm.pl: Prints the map of RAM, list of bits and
+	  start of stack.
+
+2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>
+
 	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables.
 
 2013-01-26 Molnar Karoly <molnarkaroly AT users.sf.net>
